[gd_scene load_steps=18 format=2]

[ext_resource path="res://Sprites/Dudu.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Player.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Indicator.tscn" type="PackedScene" id=3]
[ext_resource path="res://Sprites/Kai.png" type="Texture" id=4]
[ext_resource path="res://Scripts/Npc.gd" type="Script" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 10 )

[sub_resource type="Animation" id=2]
resource_name = "Down"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Player/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 1, 2 ]
}

[sub_resource type="Animation" id=3]
length = 0.001

[sub_resource type="Animation" id=4]
resource_name = "Right"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Player/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 7, 6 ]
}

[sub_resource type="Animation" id=5]
resource_name = "Up"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Player/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 4, 5 ]
}

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 7.5, 10 )

[sub_resource type="Animation" id=7]
resource_name = "Down"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Npc/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 1, 2 ]
}

[sub_resource type="Animation" id=8]
length = 0.001

[sub_resource type="Animation" id=9]
resource_name = "Right"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Npc/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 7, 6 ]
}

[sub_resource type="Animation" id=10]
resource_name = "Up"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Npc/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 4, 5 ]
}

[sub_resource type="CircleShape2D" id=11]
radius = 22.0

[sub_resource type="CircleShape2D" id=12]
radius = 14.0357

[node name="Players" type="Node2D"]

[node name="Player" type="KinematicBody2D" parent="."]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="Player"]
modulate = Color( 0.431373, 0.670588, 0.686275, 1 )
texture = ExtResource( 1 )
hframes = 3
vframes = 3
frame = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
shape = SubResource( 1 )

[node name="Indicator" parent="Player" instance=ExtResource( 3 )]
position = Vector2( 0, -17 )

[node name="Animation" type="AnimationPlayer" parent="Player"]
root_node = NodePath("../..")
anims/Down = SubResource( 2 )
anims/RESET = SubResource( 3 )
anims/Right = SubResource( 4 )
anims/Up = SubResource( 5 )

[node name="Npc" type="KinematicBody2D" parent="."]
position = Vector2( 16, 0 )
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="Npc"]
modulate = Color( 0.431373, 0.670588, 0.686275, 1 )
texture = ExtResource( 4 )
hframes = 3
vframes = 3
frame = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Npc"]
shape = SubResource( 6 )

[node name="Animation" type="AnimationPlayer" parent="Npc"]
root_node = NodePath("../..")
anims/Down = SubResource( 7 )
anims/RESET = SubResource( 8 )
anims/Right = SubResource( 9 )
anims/Up = SubResource( 10 )

[node name="Area" type="Area2D" parent="Npc"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Npc/Area"]
shape = SubResource( 11 )

[node name="Area2D" type="Area2D" parent="Npc"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Npc/Area2D"]
shape = SubResource( 12 )

[connection signal="body_entered" from="Npc/Area" to="Npc" method="_on_Area_body_entered"]
[connection signal="body_exited" from="Npc/Area" to="Npc" method="_on_Area_body_exited"]
[connection signal="body_entered" from="Npc/Area2D" to="Npc" method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Npc/Area2D" to="Npc" method="_on_Area2D_body_exited"]
